Added new background image

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
  #background-image{
      height: 83%;
      width: 100%;
-     background-image: url(DSC03254-Bearbeitet+2.jpg);
+     background-image: url(img/background.jpg);
  }
 #test{
     position: relative;
