--- a/index.css
+++ b/index.css
@@ -2,16 +2,38 @@ body {
     background-color: #474747;
 }
  #background-image{
-     height: 100%;
-     width: 100%;
-     background-image: url(img/background.jpg);
-     background-repeat: no-repeat;
-     background-position: center top;
-     background-size: 100% 100%;
+     
  }
 #btn_redirect{
     position: relative;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+#content:before {
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  
+  
+  height: 100%;
+  width: 100%;
+  background-image: url(img/background.jpg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 100% 100%;
+  
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
+#content {
+  position: relative;
+  top: 50%
+  z-index: 0;
 }
