--- a/index.css
+++ b/index.css
@@ -1,10 +1,15 @@
-﻿body {
+body {
+    background-color: #474747;
 }
  h1{
      color: azure;
  }
  #background-image{
-     height: 100%;
-     width; 100%;
-     background-image: url(DSC03254-Bearbeitet.jpg);
+     height: 83%;
+     width: 100%;
+     background-image: url(DSC03254-Bearbeitet+2.jpg);
  }
+#test{
+    left: 50%;
+    top: 50%;
+}
