--- a/index.css
+++ b/index.css
@@ -1,16 +1,16 @@
 body {
     background-color: #474747;
 }
- h1{
-     color: azure;
- }
  #background-image{
      height: 83%;
      width: 100%;
      background-image: url(img/background.jpg);
+     background-size: 100% 100%;
+     
  }
-#test{
+#btn_redirect{
     position: relative;
     left: 50%;
     top: 50%;
+    transform: translate(-50%, -50%);
 }
