--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body {
   
   height: 100%;
   width: 100%;
-  background-image: url(img/background.jpg);
+  background-image: url(img/bg.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 100% 100%;
