--- a/index.css
+++ b/index.css
@@ -1,41 +1,73 @@
 body {
-    background-color: #474747;
+    position: relative;
+    top: 50%
+    z-index: 0;
+    width: 100%;
+    height: 100%;
 }
- #background-image{
-     
- }
+
+
+body:before{
+    content: "";
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: -1;
+  
+  
+    height: 100%;
+    width: 100%;
+    background-image: url(img/TestPicture.PNG);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: 100% 100%;
+  
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+
 #btn_redirect{
     position: relative;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
-#content:before {
-  content: "";
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  
-  
-  height: 100%;
-  width: 100%;
-  background-image: url(img/bg.jpg);
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: 100% 100%;
-  
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
+
+#test {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
-#content {
-  position: relative;
-  top: 50%
-  z-index: 0;
-  width: 100%;
-  height: 100%;
+h2 {
+    color: white;
+    text-align: center;
+    font-family: 'Prompt', sans-serif;
+    font-size: 24px;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+    font-family: 'Prompt', sans-serif;
+    font-size: 48px;
+}
+
+#footer {
+    height: auto;
+    background-color: rgba(50,50,50,0.6);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+}
+
+#copyright:before{
+    content: "\00a9 \00a0";
 }
