--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ body:before{
 #test {
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
 }
 
@@ -70,4 +70,13 @@ h1 {
 
 #copyright:before{
     content: "\00a9 \00a0";
+}
+#description {
+    width: 40%;
+    font-family: 'Prompt', sans-serif;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%,-0%);
+    color: white;
+    text-align: justify;
 }
